grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FILE

Grammar

Rule 0     S' -> init
Rule 1     init -> commandsI
Rule 2     commandsI -> commandsI command
Rule 3     commandsI -> command
Rule 4     command -> mkdisk_block
Rule 5     command -> rmdisk_block
Rule 6     command -> fdisk_block
Rule 7     command -> mount_block
Rule 8     command -> unmount_block
Rule 9     command -> mkfs_block
Rule 10    command -> login_block
Rule 11    command -> logout_block
Rule 12    command -> mkgrp_block
Rule 13    command -> usr_block
Rule 14    command -> mkdir_block
Rule 15    command -> mkfile_block
Rule 16    command -> rep_block
Rule 17    command -> pause_block
Rule 18    command -> cat_block
Rule 19    command -> rename_block
Rule 20    command -> rmgrp_block
Rule 21    command -> rmusr_block
Rule 22    rmusr_block -> RMUSR rmusr_params
Rule 23    rmusr_params -> rmusr_params rmusr_param
Rule 24    rmusr_params -> rmusr_param
Rule 25    rmusr_param -> SEPARATOR USER ASSIGN ID
Rule 26    rmusr_param -> SEPARATOR USER ASSIGN STRING
Rule 27    rmgrp_block -> RMGRP rmgrp_params
Rule 28    rmgrp_params -> rmgrp_params rmgrp_param
Rule 29    rmgrp_params -> rmgrp_param
Rule 30    rmgrp_param -> SEPARATOR NAME ASSIGN ID
Rule 31    rmgrp_param -> SEPARATOR NAME ASSIGN STRING
Rule 32    pause_block -> PAUSE
Rule 33    mkdisk_block -> MKDISK mkdisk_params
Rule 34    rmdisk_block -> RMDISK SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 35    rmdisk_block -> RMDISK SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 36    mkdisk_params -> mkdisk_params mkdisk_param
Rule 37    mkdisk_params -> mkdisk_param
Rule 38    mkdisk_param -> SEPARATOR SIZE ASSIGN NUMBER
Rule 39    mkdisk_param -> SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 40    mkdisk_param -> SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 41    mkdisk_param -> SEPARATOR UNIT ASSIGN ID
Rule 42    mkdisk_param -> SEPARATOR FIT ASSIGN ID
Rule 43    fdisk_block -> FDISK fdisk_params
Rule 44    fdisk_params -> fdisk_params fdisk_param
Rule 45    fdisk_params -> fdisk_param
Rule 46    fdisk_param -> SEPARATOR SIZE ASSIGN NUMBER
Rule 47    fdisk_param -> SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 48    fdisk_param -> SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 49    fdisk_param -> SEPARATOR NAME ASSIGN ID
Rule 50    fdisk_param -> SEPARATOR NAME ASSIGN PATHWITHOUTQUOTES
Rule 51    fdisk_param -> SEPARATOR UNIT ASSIGN ID
Rule 52    fdisk_param -> SEPARATOR TYPE ASSIGN ID
Rule 53    fdisk_param -> SEPARATOR FIT ASSIGN ID
Rule 54    fdisk_param -> SEPARATOR DELETE ASSIGN ID
Rule 55    fdisk_param -> SEPARATOR ADD ASSIGN NUMBER
Rule 56    fdisk_param -> SEPARATOR ADD ASSIGN NEGATIVE
Rule 57    mount_block -> MOUNT mount_params
Rule 58    mount_params -> mount_params mount_param
Rule 59    mount_params -> mount_param
Rule 60    mount_param -> SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 61    mount_param -> SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 62    mount_param -> SEPARATOR NAME ASSIGN ID
Rule 63    unmount_block -> UNMOUNT unmount_params
Rule 64    unmount_params -> unmount_params unmount_param
Rule 65    unmount_params -> unmount_param
Rule 66    unmount_param -> SEPARATOR ID_PARAM ASSIGN MOUNTNAME
Rule 67    mkfs_block -> MKFS mkfs_params
Rule 68    mkfs_params -> mkfs_params mkfs_param
Rule 69    mkfs_params -> mkfs_param
Rule 70    mkfs_param -> SEPARATOR ID_PARAM ASSIGN MOUNTNAME
Rule 71    mkfs_param -> SEPARATOR TYPE ASSIGN ID
Rule 72    mkfs_param -> SEPARATOR FS ASSIGN MOUNTNAME
Rule 73    login_block -> LOGIN login_params
Rule 74    login_params -> login_params login_param
Rule 75    login_params -> login_param
Rule 76    login_param -> SEPARATOR USER ASSIGN STRING
Rule 77    login_param -> SEPARATOR PASS ASSIGN STRING
Rule 78    login_param -> SEPARATOR PASS ASSIGN ID
Rule 79    login_param -> SEPARATOR PASS ASSIGN NUMBER
Rule 80    login_param -> SEPARATOR USER ASSIGN ID
Rule 81    login_param -> SEPARATOR ID_PARAM ASSIGN MOUNTNAME
Rule 82    logout_block -> LOGOUT
Rule 83    mkgrp_block -> MKGRP mkgrp_params
Rule 84    mkgrp_params -> mkgrp_params mkgrp_param
Rule 85    mkgrp_params -> mkgrp_param
Rule 86    mkgrp_param -> SEPARATOR NAME ASSIGN ID
Rule 87    mkgrp_param -> SEPARATOR NAME ASSIGN STRING
Rule 88    usr_block -> MKUSR usr_params
Rule 89    usr_params -> usr_params usr_param
Rule 90    usr_params -> usr_param
Rule 91    usr_param -> SEPARATOR USER ASSIGN STRING
Rule 92    usr_param -> SEPARATOR USER ASSIGN ID
Rule 93    usr_param -> SEPARATOR PASS ASSIGN ID
Rule 94    usr_param -> SEPARATOR PASS ASSIGN STRING
Rule 95    usr_param -> SEPARATOR PASS ASSIGN NUMBER
Rule 96    usr_param -> SEPARATOR GRP ASSIGN ID
Rule 97    usr_param -> SEPARATOR GRP ASSIGN STRING
Rule 98    mkdir_block -> MKDIR mkdir_params
Rule 99    mkdir_params -> mkdir_params mkdir_param
Rule 100   mkdir_params -> mkdir_param
Rule 101   mkdir_param -> SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 102   mkdir_param -> SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 103   mkdir_param -> SEPARATOR R
Rule 104   mkfile_block -> MKFILE mkfile_params
Rule 105   mkfile_params -> mkfile_params mkfile_param
Rule 106   mkfile_params -> mkfile_param
Rule 107   mkfile_param -> SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 108   mkfile_param -> SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 109   mkfile_param -> SEPARATOR CONT ASSIGN PATHWITHQUOTES
Rule 110   mkfile_param -> SEPARATOR CONT ASSIGN PATHWITHOUTQUOTES
Rule 111   mkfile_param -> SEPARATOR SIZE ASSIGN NUMBER
Rule 112   rep_block -> REP rep_params
Rule 113   rep_params -> rep_params rep_param
Rule 114   rep_params -> rep_param
Rule 115   rep_param -> SEPARATOR ID_PARAM ASSIGN MOUNTNAME
Rule 116   rep_param -> SEPARATOR RUTA ASSIGN PATHWITHQUOTES
Rule 117   rep_param -> SEPARATOR RUTA ASSIGN PATHWITHOUTQUOTES
Rule 118   rep_param -> SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 119   rep_param -> SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 120   rep_param -> SEPARATOR NAME ASSIGN ID
Rule 121   rep_param -> SEPARATOR NAME ASSIGN STRING
Rule 122   cat_block -> CAT cat_params
Rule 123   cat_params -> cat_params cat_param
Rule 124   cat_params -> cat_param
Rule 125   cat_param -> SEPARATOR FILEN ASSIGN PATHWITHQUOTES
Rule 126   cat_param -> SEPARATOR FILEN ASSIGN PATHWITHOUTQUOTES
Rule 127   cat_param -> SEPARATOR FILEN ASSIGN PATHWITHQUOTES cat_param
Rule 128   cat_param -> SEPARATOR FILEN ASSIGN PATHWITHOUTQUOTES cat_param
Rule 129   rename_block -> RENAME rename_params
Rule 130   rename_params -> rename_params rename_param
Rule 131   rename_params -> rename_param
Rule 132   rename_param -> SEPARATOR PATH ASSIGN PATHWITHQUOTES
Rule 133   rename_param -> SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
Rule 134   rename_param -> SEPARATOR NAME ASSIGN EXTENSION
Rule 135   rename_param -> SEPARATOR NAME ASSIGN ID
Rule 136   rename_param -> SEPARATOR NAME ASSIGN STRING

Terminals, with rules where they appear

ADD                  : 55 56
ASSIGN               : 25 26 30 31 34 35 38 39 40 41 42 46 47 48 49 50 51 52 53 54 55 56 60 61 62 66 70 71 72 76 77 78 79 80 81 86 87 91 92 93 94 95 96 97 101 102 107 108 109 110 111 115 116 117 118 119 120 121 125 126 127 128 132 133 134 135 136
CAT                  : 122
CONT                 : 109 110
DELETE               : 54
EXTENSION            : 134
FDISK                : 43
FILE                 : 
FILEN                : 125 126 127 128
FIT                  : 42 53
FS                   : 72
GRP                  : 96 97
ID                   : 25 30 41 42 49 51 52 53 54 62 71 78 80 86 92 93 96 120 135
ID_PARAM             : 66 70 81 115
LOGIN                : 73
LOGOUT               : 82
MKDIR                : 98
MKDISK               : 33
MKFILE               : 104
MKFS                 : 67
MKGRP                : 83
MKUSR                : 88
MOUNT                : 57
MOUNTNAME            : 66 70 72 81 115
NAME                 : 30 31 49 50 62 86 87 120 121 134 135 136
NEGATIVE             : 56
NUMBER               : 38 46 55 79 95 111
PASS                 : 77 78 79 93 94 95
PATH                 : 34 35 39 40 47 48 60 61 101 102 107 108 118 119 132 133
PATHWITHOUTQUOTES    : 35 40 48 50 61 102 108 110 117 119 126 128 133
PATHWITHQUOTES       : 34 39 47 60 101 107 109 116 118 125 127 132
PAUSE                : 32
R                    : 103
RENAME               : 129
REP                  : 112
RMDISK               : 34 35
RMGRP                : 27
RMUSR                : 22
RUTA                 : 116 117
SEPARATOR            : 25 26 30 31 34 35 38 39 40 41 42 46 47 48 49 50 51 52 53 54 55 56 60 61 62 66 70 71 72 76 77 78 79 80 81 86 87 91 92 93 94 95 96 97 101 102 103 107 108 109 110 111 115 116 117 118 119 120 121 125 126 127 128 132 133 134 135 136
SIZE                 : 38 46 111
STRING               : 26 31 76 77 87 91 94 97 121 136
TYPE                 : 52 71
UNIT                 : 41 51
UNMOUNT              : 63
USER                 : 25 26 76 80 91 92
error                : 

Nonterminals, with rules where they appear

cat_block            : 18
cat_param            : 123 124 127 128
cat_params           : 122 123
command              : 2 3
commandsI            : 1 2
fdisk_block          : 6
fdisk_param          : 44 45
fdisk_params         : 43 44
init                 : 0
login_block          : 10
login_param          : 74 75
login_params         : 73 74
logout_block         : 11
mkdir_block          : 14
mkdir_param          : 99 100
mkdir_params         : 98 99
mkdisk_block         : 4
mkdisk_param         : 36 37
mkdisk_params        : 33 36
mkfile_block         : 15
mkfile_param         : 105 106
mkfile_params        : 104 105
mkfs_block           : 9
mkfs_param           : 68 69
mkfs_params          : 67 68
mkgrp_block          : 12
mkgrp_param          : 84 85
mkgrp_params         : 83 84
mount_block          : 7
mount_param          : 58 59
mount_params         : 57 58
pause_block          : 17
rename_block         : 19
rename_param         : 130 131
rename_params        : 129 130
rep_block            : 16
rep_param            : 113 114
rep_params           : 112 113
rmdisk_block         : 5
rmgrp_block          : 20
rmgrp_param          : 28 29
rmgrp_params         : 27 28
rmusr_block          : 21
rmusr_param          : 23 24
rmusr_params         : 22 23
unmount_block        : 8
unmount_param        : 64 65
unmount_params       : 63 64
usr_block            : 13
usr_param            : 89 90
usr_params           : 88 89

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . commandsI
    (2) commandsI -> . commandsI command
    (3) commandsI -> . command
    (4) command -> . mkdisk_block
    (5) command -> . rmdisk_block
    (6) command -> . fdisk_block
    (7) command -> . mount_block
    (8) command -> . unmount_block
    (9) command -> . mkfs_block
    (10) command -> . login_block
    (11) command -> . logout_block
    (12) command -> . mkgrp_block
    (13) command -> . usr_block
    (14) command -> . mkdir_block
    (15) command -> . mkfile_block
    (16) command -> . rep_block
    (17) command -> . pause_block
    (18) command -> . cat_block
    (19) command -> . rename_block
    (20) command -> . rmgrp_block
    (21) command -> . rmusr_block
    (33) mkdisk_block -> . MKDISK mkdisk_params
    (34) rmdisk_block -> . RMDISK SEPARATOR PATH ASSIGN PATHWITHQUOTES
    (35) rmdisk_block -> . RMDISK SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
    (43) fdisk_block -> . FDISK fdisk_params
    (57) mount_block -> . MOUNT mount_params
    (63) unmount_block -> . UNMOUNT unmount_params
    (67) mkfs_block -> . MKFS mkfs_params
    (73) login_block -> . LOGIN login_params
    (82) logout_block -> . LOGOUT
    (83) mkgrp_block -> . MKGRP mkgrp_params
    (88) usr_block -> . MKUSR usr_params
    (98) mkdir_block -> . MKDIR mkdir_params
    (104) mkfile_block -> . MKFILE mkfile_params
    (112) rep_block -> . REP rep_params
    (32) pause_block -> . PAUSE
    (122) cat_block -> . CAT cat_params
    (129) rename_block -> . RENAME rename_params
    (27) rmgrp_block -> . RMGRP rmgrp_params
    (22) rmusr_block -> . RMUSR rmusr_params

    MKDISK          shift and go to state 22
    RMDISK          shift and go to state 23
    FDISK           shift and go to state 24
    MOUNT           shift and go to state 25
    UNMOUNT         shift and go to state 26
    MKFS            shift and go to state 27
    LOGIN           shift and go to state 28
    LOGOUT          shift and go to state 29
    MKGRP           shift and go to state 30
    MKUSR           shift and go to state 31
    MKDIR           shift and go to state 32
    MKFILE          shift and go to state 33
    REP             shift and go to state 34
    PAUSE           shift and go to state 35
    CAT             shift and go to state 36
    RENAME          shift and go to state 37
    RMGRP           shift and go to state 38
    RMUSR           shift and go to state 39

    init                           shift and go to state 1
    commandsI                      shift and go to state 2
    command                        shift and go to state 3
    mkdisk_block                   shift and go to state 4
    rmdisk_block                   shift and go to state 5
    fdisk_block                    shift and go to state 6
    mount_block                    shift and go to state 7
    unmount_block                  shift and go to state 8
    mkfs_block                     shift and go to state 9
    login_block                    shift and go to state 10
    logout_block                   shift and go to state 11
    mkgrp_block                    shift and go to state 12
    usr_block                      shift and go to state 13
    mkdir_block                    shift and go to state 14
    mkfile_block                   shift and go to state 15
    rep_block                      shift and go to state 16
    pause_block                    shift and go to state 17
    cat_block                      shift and go to state 18
    rename_block                   shift and go to state 19
    rmgrp_block                    shift and go to state 20
    rmusr_block                    shift and go to state 21

state 1

    (0) S' -> init .



state 2

    (1) init -> commandsI .
    (2) commandsI -> commandsI . command
    (4) command -> . mkdisk_block
    (5) command -> . rmdisk_block
    (6) command -> . fdisk_block
    (7) command -> . mount_block
    (8) command -> . unmount_block
    (9) command -> . mkfs_block
    (10) command -> . login_block
    (11) command -> . logout_block
    (12) command -> . mkgrp_block
    (13) command -> . usr_block
    (14) command -> . mkdir_block
    (15) command -> . mkfile_block
    (16) command -> . rep_block
    (17) command -> . pause_block
    (18) command -> . cat_block
    (19) command -> . rename_block
    (20) command -> . rmgrp_block
    (21) command -> . rmusr_block
    (33) mkdisk_block -> . MKDISK mkdisk_params
    (34) rmdisk_block -> . RMDISK SEPARATOR PATH ASSIGN PATHWITHQUOTES
    (35) rmdisk_block -> . RMDISK SEPARATOR PATH ASSIGN PATHWITHOUTQUOTES
    (43) fdisk_block -> . FDISK fdisk_params
    (57) mount_block -> . MOUNT mount_params
    (63) unmount_block -> . UNMOUNT unmount_params
    (67) mkfs_block -> . MKFS mkfs_params
    (73) login_block -> . LOGIN login_params
    (82) logout_block -> . LOGOUT
    (83) mkgrp_block -> . MKGRP mkgrp_params
    (88) usr_block -> . MKUSR usr_params
    (98) mkdir_block -> . MKDIR mkdir_params
    (104) mkfile_block -> . MKFILE mkfile_params
    (112) rep_block -> . REP rep_params
    (32) pause_block -> . PAUSE
    (122) cat_block -> . CAT cat_params
    (129) rename_block -> . RENAME rename_params
    (27) rmgrp_block -> . RMGRP rmgrp_params
    (22) rmusr_block -> . RMUSR rmusr_params

    $end            reduce using rule 1 (init -> commandsI .)
    MKDISK          shift and go to state 22
    RMDISK          shift and go to state 23
    FDISK           shift and go to state 24
    MOUNT           shift and go to state 25
    UNMOUNT         shift and go to state 26
    MKFS            shift and go to state 27
    LOGIN           shift and go to state 28
    LOGOUT          shift and go to state 29
    MKGRP           shift and go to state 30
    MKUSR           shift and go to state 31
    MKDIR           shift and go to state 32
    MKFILE          shift and go to state 33
    REP             shift and go to state 34
    PAUSE           shift and go to state 35
    CAT             shift and go to state 36
    RENAME          shift and go to state 37
    RMGRP           shift and go to state 38
    RMUSR           shift and go to state 39

    command                        shift and go to state 40
    mkdisk_block                   shift and go to state 4
    rmdisk_block                   shift and go to state 5
    fdisk_block                    shift and go to state 6
    mount_block                    shift and go to state 7
    unmount_block                  shift and go to state 8
    mkfs_block                     shift and go to state 9
    login_block                    shift and go to state 10
    logout_block                   shift and go to state 11
    mkgrp_block                    shift and go to state 12
    usr_block                      shift and go to state 13
    mkdir_block                    shift and go to state 14
    mkfile_block                   shift and go to state 15
    rep_block                      shift and go to state 16
    pause_block                    shift and go to state 17
    cat_block                      shift and go to state 18
    rename_block                   shift and go to state 19
    rmgrp_block                    shift and go to state 20
    rmusr_block                    shift and go to state 21

state 3

    (3) commandsI -> command .

    MKDISK          reduce using rule 3 (commandsI -> command .)
    RMDISK          reduce using rule 3 (commandsI -> command .)
    FDISK           reduce using rule 3 (commandsI -> command .)
    MOUNT           reduce using rule 3 (commandsI -> command .)
    UNMOUNT         reduce using rule 3 (commandsI -> command .)
    MKFS            reduce using rule 3 (commandsI -> command .)
    LOGIN           reduce using rule 3 (commandsI -> command .)
    LOGOUT          reduce using rule 3 (commandsI -> command .)
    MKGRP           reduce using rule 3 (commandsI -> command .)
    MKUSR           reduce using rule 3 (commandsI -> command .)
    MKDIR           reduce using rule 3 (commandsI -> command .)
    MKFILE          reduce using rule 3 (commandsI -> command .)
    REP             reduce using rule 3 (commandsI -> command .)
    PAUSE           reduce using rule 3 (commandsI -> command .)
    CAT             reduce using rule 3 (commandsI -> command .)
    RENAME          reduce using rule 3 (commandsI -> command .)
    RMGRP           reduce using rule 3 (commandsI -> command .)
    RMUSR           reduce using rule 3 (commandsI -> command .)
    $end            reduce using rule 3 (commandsI -> command .)


state 4

    (4) command -> mkdisk_block .

    MKDISK          reduce using rule 4 (command -> mkdisk_block .)
    RMDISK          reduce using rule 4 (command -> mkdisk_block .)
    FDISK           reduce using rule 4 (command -> mkdisk_block .)
    MOUNT           reduce using rule 4 (command -> mkdisk_block .)
    UNMOUNT         reduce using rule 4 (command -> mkdisk_block .)
    MKFS            reduce using rule 4 (command -> mkdisk_block .)
    LOGIN           reduce using rule 4 (command -> mkdisk_block .)
    LOGOUT          reduce using rule 4 (command -> mkdisk_block .)
    MKGRP           reduce using rule 4 (command -> mkdisk_block .)
    MKUSR           reduce using rule 4 (command -> mkdisk_block .)
    MKDIR           reduce using rule 4 (command -> mkdisk_block .)
    MKFILE          reduce using rule 4 (command -> mkdisk_block .)
    REP             reduce using rule 4 (command -> mkdisk_block .)
    PAUSE           reduce using rule 4 (command -> mkdisk_block .)
    CAT             reduce using rule 4 (command -> mkdisk_block .)
    RENAME          reduce using rule 4 (command -> mkdisk_block .)
    RMGRP           reduce using rule 4 (command -> mkdisk_block .)
    RMUSR           reduce using rule 4 (command -> mkdisk_block .)
    $end            reduce using rule 4 (command -> mkdisk_block .)


state 5

    (5) command -> rmdisk_block .

    MKDISK          reduce using rule 5 (command -> rmdisk_block .)
    RMDISK          reduce using rule 5 (command -> rmdisk_block .)
    FDISK           reduce using rule 5 (command -> rmdisk_block .)
    MOUNT           reduce using rule 5 (command -> rmdisk_block .)
    UNMOUNT         reduce using rule 5 (command -> rmdisk_block .)
    MKFS            reduce using rule 5 (command -> rmdisk_block .)
    LOGIN           reduce using rule 5 (command -> rmdisk_block .)
    LOGOUT          reduce using rule 5 (command -> rmdisk_block .)
    MKGRP           reduce using rule 5 (command -> rmdisk_block .)
    MKUSR           reduce using rule 5 (command -> rmdisk_block .)
    MKDIR           reduce using rule 5 (command -> rmdisk_block .)
    MKFILE          reduce using rule 5 (command -> rmdisk_block .)
    REP             reduce using rule 5 (command -> rmdisk_block .)
    PAUSE           reduce using rule 5 (command -> rmdisk_block .)
    CAT             reduce using rule 5 (command -> rmdisk_block .)
    RENAME          reduce using rule 5 (command -> rmdisk_block .)
    RMGRP           reduce using rule 5 (command -> rmdisk_block .)
    RMUSR           reduce using rule 5 (command -> rmdisk_block .)
    $end            reduce using rule 5 (command -> rmdisk_block .)


state 6

    (6) command -> fdisk_block .

    MKDISK          reduce using rule 6 (command -> fdisk_block .)
    RMDISK          reduce using rule 6 (command -> fdisk_block .)
    FDISK           reduce using rule 6 (command -> fdisk_block .)
    MOUNT           reduce using rule 6 (command -> fdisk_block .)
    UNMOUNT         reduce using rule 6 (command -> fdisk_block .)
    MKFS            reduce using rule 6 (command -> fdisk_block .)
    LOGIN           reduce using rule 6 (command -> fdisk_block .)
    LOGOUT          reduce using rule 6 (command -> fdisk_block .)
    MKGRP           reduce using rule 6 (command -> fdisk_block .)
    MKUSR           reduce using rule 6 (command -> fdisk_block .)
    MKDIR           reduce using rule 6 (command -> fdisk_block .)
    MKFILE          reduce using rule 6 (command -> fdisk_block .)
    REP             reduce using rule 6 (command -> fdisk_block .)
    PAUSE           reduce using rule 6 (command -> fdisk_block .)
    CAT             reduce using rule 6 (command -> fdisk_block .)
    RENAME          reduce using rule 6 (command -> fdisk_block .)
    RMGRP           reduce using rule 6 (command -> fdisk_block .)
    RMUSR           reduce using rule 6 (command -> fdisk_block .)
    $end            reduce using rule 6 (command -> fdisk_block .)


state 7

    (7) command -> mount_block .

    MKDISK          reduce using rule 7 (command -> mount_block .)
    RMDISK          reduce using rule 7 (command -> mount_block .)
    FDISK           reduce using rule 7 (command -> mount_block .)
    MOUNT           reduce using rule 7 (command -> mount_block .)
    UNMOUNT         reduce using rule 7 (command -> mount_block .)
    MKFS            reduce using rule 7 (command -> mount_block .)
    LOGIN           reduce using rule 7 (command -> mount_block .)
    LOGOUT          reduce using rule 7 (command -> mount_block .)
    MKGRP           reduce using rule 7 (command -> mount_block .)
    MKUSR           reduce using rule 7 (command -> mount_block .)
    MKDIR           reduce using rule 7 (command -> mount_block .)
    MKFILE          reduce using rule 7 (command -> mount_block .)
    REP             reduce using rule 7 (command -> mount_block .)
    PAUSE           reduce using rule 7 (command -> mount_block .)
    CAT             reduce using rule 7 (command -> mount_block .)
    RENAME          reduce using rule 7 (command -> mount_block .)
    RMGRP           reduce using rule 7 (command -> mount_block .)
    RMUSR           reduce using rule 7 (command -> mount_block .)
    $end            reduce using rule 7 (command -> mount_block .)


state 8

    (8) command -> unmount_block .

    MKDISK          reduce using rule 8 (command -> unmount_block .)
    RMDISK          reduce using rule 8 (command -> unmount_block .)
    FDISK           reduce using rule 8 (command -> unmount_block .)
    MOUNT           reduce using rule 8 (command -> unmount_block .)
    UNMOUNT         reduce using rule 8 (command -> unmount_block .)
    MKFS            reduce using rule 8 (command -> unmount_block .)
    LOGIN           reduce using rule 8 (command -> unmount_block .)
    LOGOUT          reduce using rule 8 (command -> unmount_block .)
    MKGRP           reduce using rule 8 (command -> unmount_block .)
    MKUSR           reduce using rule 8 (command -> unmount_block .)
    MKDIR           reduce using rule 8 (command -> unmount_block .)
    MKFILE          reduce using rule 8 (command -> unmount_block .)
    REP             reduce using rule 8 (command -> unmount_block .)
    PAUSE           reduce using rule 8 (command -> unmount_block .)
    CAT             reduce using rule 8 (command -> unmount_block .)
    RENAME          reduce using rule 8 (command -> unmount_block .)
    RMGRP           reduce using rule 8 (command -> unmount_block .)
    RMUSR           reduce using rule 8 (command -> unmount_block .)
    $end            reduce using rule 8 (command -> unmount_block .)


state 9

    (9) command -> mkfs_block .

    MKDISK          reduce using rule 9 (command -> mkfs_block .)
    RMDISK          reduce using rule 9 (command -> mkfs_block .)
    FDISK           reduce using rule 9 (command -> mkfs_block .)
    MOUNT           reduce using rule 9 (command -> mkfs_block .)
    UNMOUNT         reduce using rule 9 (command -> mkfs_block .)
    MKFS            reduce using rule 9 (command -> mkfs_block .)
    LOGIN           reduce using rule 9 (command -> mkfs_block .)
    LOGOUT          reduce using rule 9 (command -> mkfs_block .)
    MKGRP           reduce using rule 9 (command -> mkfs_block .)
    MKUSR           reduce using rule 9 (command -> mkfs_block .)
    MKDIR           reduce using rule 9 (command -> mkfs_block .)
    MKFILE          reduce using rule 9 (command -> mkfs_block .)
    REP             reduce using rule 9 (command -> mkfs_block .)
    PAUSE           reduce using rule 9 (command -> mkfs_block .)
    CAT             reduce using rule 9 (command -> mkfs_block .)
    RENAME          reduce using rule 9 (command -> mkfs_block .)
    RMGRP           reduce using rule 9 (command -> mkfs_block .)
    RMUSR           reduce using rule 9 (command -> mkfs_block .)
    $end            reduce using rule 9 (command -> mkfs_block .)


state 10

    (10) command -> login_block .

    MKDISK          reduce using rule 10 (command -> login_block .)
    RMDISK          reduce using rule 10 (command -> login_block .)
    FDISK           reduce using rule 10 (command -> login_block .)
    MOUNT           reduce using rule 10 (command -> login_block .)
    UNMOUNT         reduce using rule 10 (command -> login_block .)
    MKFS            reduce using rule 10 (command -> login_block .)
    LOGIN           reduce using rule 10 (command -> login_block .)
    LOGOUT          reduce using rule 10 (command -> login_block .)
    MKGRP           reduce using rule 10 (command -> login_block .)
    MKUSR           reduce using rule 10 (command -> login_block .)
    MKDIR           reduce using rule 10 (command -> login_block .)
    MKFILE          reduce using rule 10 (command -> login_block .)
    REP             reduce using rule 10 (command -> login_block .)
    PAUSE           reduce using rule 10 (command -> login_block .)
    CAT             reduce using rule 10 (command -> login_block .)
    RENAME          reduce using rule 10 (command -> login_block .)
    RMGRP           reduce using rule 10 (command -> login_block .)
    RMUSR           reduce using rule 10 (command -> login_block .)
    $end            reduce using rule 10 (command -> login_block .)


state 11

    (11) command -> logout_block .

    MKDISK          reduce using rule 11 (command -> logout_block .)
    RMDISK          reduce using rule 11 (command -> logout_block .)
    FDISK           reduce using rule 11 (command -> logout_block .)
    MOUNT           reduce using rule 11 (command -> logout_block .)
    UNMOUNT         reduce using rule 11 (command -> logout_block .)
    MKFS            reduce using rule 11 (command -> logout_block .)
    LOGIN           reduce using rule 11 (command -> logout_block .)
    LOGOUT          reduce using rule 11 (command -> logout_block .)
    MKGRP           reduce using rule 11 (command -> logout_block .)
    MKUSR           reduce using rule 11 (command -> logout_block .)
    MKDIR           reduce using rule 11 (command -> logout_block .)
    MKFILE          reduce using rule 11 (command -> logout_block .)
    REP             reduce using rule 11 (command -> logout_block .)
    PAUSE           reduce using rule 11 (command -> logout_block .)
    CAT             reduce using rule 11 (command -> logout_block .)
    RENAME          reduce using rule 11 (command -> logout_block .)
    RMGRP           reduce using rule 11 (command -> logout_block .)
    RMUSR           reduce using rule 11 (command -> logout_block .)
    $end            reduce using rule 11 (command -> logout_block .)


state 12

    (12) command -> mkgrp_block .

    MKDISK          reduce using rule 12 (command -> mkgrp_block .)
    RMDISK          reduce using rule 12 (command -> mkgrp_block .)
    FDISK           reduce using rule 12 (command -> mkgrp_block .)
    MOUNT           reduce using rule 12 (command -> mkgrp_block .)
    UNMOUNT         reduce using rule 12 (command -> mkgrp_block .)
    MKFS            reduce using rule 12 (command -> mkgrp_block .)
    LOGIN           reduce using rule 12 (command -> mkgrp_block .)
    LOGOUT          reduce using rule 12 (command -> mkgrp_block .)
    MKGRP           reduce using rule 12 (command -> mkgrp_block .)
    MKUSR           reduce using rule 12 (command -> mkgrp_block .)
    MKDIR           reduce using rule 12 (command -> mkgrp_block .)
    MKFILE          reduce using rule 12 (command -> mkgrp_block .)
    REP             reduce using rule 12 (command -> mkgrp_block .)
    PAUSE           reduce using rule 12 (command -> mkgrp_block .)
    CAT             reduce using rule 12 (command -> mkgrp_block .)
    RENAME          reduce using rule 12 (command -> mkgrp_block .)
    RMGRP           reduce using rule 12 (command -> mkgrp_block .)
    RMUSR           reduce using rule 12 (command -> mkgrp_block .)
    $end            reduce using rule 12 (command -> mkgrp_block .)


state 13

    (13) command -> usr_block .

    MKDISK          reduce using rule 13 (command -> usr_block .)
    RMDISK          reduce using rule 13 (command -> usr_block .)
    FDISK           reduce using rule 13 (command -> usr_block .)
    MOUNT           reduce using rule 13 (command -> usr_block .)
    UNMOUNT         reduce using rule 13 (command -> usr_block .)
    MKFS            reduce using rule 13 (command -> usr_block .)
    LOGIN           reduce using rule 13 (command -> usr_block .)
    LOGOUT          reduce using rule 13 (command -> usr_block .)
    MKGRP           reduce using rule 13 (command -> usr_block .)
    MKUSR           reduce using rule 13 (command -> usr_block .)
    MKDIR           reduce using rule 13 (command -> usr_block .)
    MKFILE          reduce using rule 13 (command -> usr_block .)
    REP             reduce using rule 13 (command -> usr_block .)
    PAUSE           reduce using rule 13 (command -> usr_block .)
    CAT             reduce using rule 13 (command -> usr_block .)
    RENAME          reduce using rule 13 (command -> usr_block .)
    RMGRP           reduce using rule 13 (command -> usr_block .)
    RMUSR           reduce using rule 13 (command -> usr_block .)
    $end            reduce using rule 13 (command -> usr_block .)


state 14

    (14) command -> mkdir_block .
